Fix spacings

--- a/assets/css/blocks/gallery.css
+++ b/assets/css/blocks/gallery.css
@@ -6,11 +6,11 @@ Gallery
 Add additional margin to the gallery block within post content.
 */
 
-.wp-block-post-content p + .wp-block-gallery:not([style*="margin-top"]) {
+.wp-block-post-content :where(p, span[id^="more"]) + .wp-block-gallery:not([style*="margin-top"]) {
 	margin-top: calc(var(--wp--style--block-gap) * 1.5);
 }
 
-.wp-block-post-content :where(p, .wp-block-heading) + .wp-block-gallery:not([style*="margin-bottom"]) {
+.wp-block-post-content :where(p, .wp-block-heading, span[id^="more"]) + .wp-block-gallery:not([style*="margin-bottom"]) {
 	margin-bottom: calc(var(--wp--style--block-gap) * 1.5);
 }
 
@@ -18,12 +18,12 @@ Add additional margin to the gallery block within post content.
 Alignwide and alignfull gallery block.
 */
 
-.wp-block-post-content p + .wp-block-gallery.alignwide:not([style*="margin-top"]),
-.wp-block-post-content p + .wp-block-gallery.alignfull:not([style*="margin-top"]) {
+.wp-block-post-content :where(p, span[id^="more"]) + .wp-block-gallery.alignwide:not([style*="margin-top"]),
+.wp-block-post-content :where(p, span[id^="more"]) + .wp-block-gallery.alignfull:not([style*="margin-top"]) {
 	margin-top: calc(var(--wp--style--block-gap) * 2);
 }
 
-.wp-block-post-content :where(p, .wp-block-heading) + .wp-block-gallery.alignwide:not([style*="margin-bottom"]),
-.wp-block-post-content :where(p, .wp-block-heading) + .wp-block-gallery.alignfull:not([style*="margin-bottom"]) {
+.wp-block-post-content :where(p, .wp-block-heading, span[id^="more"]) + .wp-block-gallery.alignwide:not([style*="margin-bottom"]),
+.wp-block-post-content :where(p, .wp-block-heading, span[id^="more"]) + .wp-block-gallery.alignfull:not([style*="margin-bottom"]) {
 	margin-bottom: calc(var(--wp--style--block-gap) * 2);
 }
