--- a/assets/css/blocks/image.css
+++ b/assets/css/blocks/image.css
@@ -6,11 +6,11 @@ Image
 Add additional margin to the image block within post content.
 */
 
-.wp-block-post-content p + .wp-block-image:not([style*="margin-top"]) {
+.wp-block-post-content :where(p, span[id^="more"]) + .wp-block-image:not([style*="margin-top"]) {
 	margin-top: calc(var(--wp--style--block-gap) * 1.5);
 }
 
-.wp-block-post-content :where(p, .wp-block-heading) + .wp-block-image:not([style*="margin-bottom"]) {
+.wp-block-post-content :where(p, .wp-block-heading, span[id^="more"]) + .wp-block-image:not([style*="margin-bottom"]) {
 	margin-bottom: calc(var(--wp--style--block-gap) * 1.5);
 }
 
@@ -18,12 +18,12 @@ Add additional margin to the image block within post content.
 Alignwide and alignfull image block.
 */
 
-.wp-block-post-content p + .wp-block-image.alignwide:not([style*="margin-top"]),
-.wp-block-post-content p + .wp-block-image.alignfull:not([style*="margin-top"]) {
+.wp-block-post-content :where(p, span[id^="more"]) + .wp-block-image.alignwide:not([style*="margin-top"]),
+.wp-block-post-content :where(p, span[id^="more"]) + .wp-block-image.alignfull:not([style*="margin-top"]) {
 	margin-top: calc(var(--wp--style--block-gap) * 2);
 }
 
-.wp-block-post-content :where(p, .wp-block-heading) + .wp-block-image.alignwide:not([style*="margin-bottom"]),
-.wp-block-post-content :where(p, .wp-block-heading) + .wp-block-image.alignfull:not([style*="margin-bottom"]) {
+.wp-block-post-content :where(p, .wp-block-heading, span[id^="more"]) + .wp-block-image.alignwide:not([style*="margin-bottom"]),
+.wp-block-post-content :where(p, .wp-block-heading, span[id^="more"]) + .wp-block-image.alignfull:not([style*="margin-bottom"]) {
 	margin-bottom: calc(var(--wp--style--block-gap) * 2);
 }
